fixed filters positioning, fixed switch, fixed state when add/edit panel is open, worked on mobile version (#13)

--- a/app/styles/components/modal-window.scss
+++ b/app/styles/components/modal-window.scss
@@ -39,6 +39,11 @@
 
 .modal-content {
   padding: 30px;
+  box-shadow: 0 0 10px 0 #b9c7e7;
+  border: none;
+  @media (min-width: 768px) {
+    box-shadow: 0 0 10px 0 #b9c7e7;
+  }
 }
 
 .modal-header {
