--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -29,14 +29,14 @@
   }
   &-default {
       background-color: $header-bg;
-      box-shadow: 0 4px 5px 0 rgba(174, 198, 255, 0.19);
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
-      transition: all 0.5s ease;
-      &.navbar-closed {
-        box-shadow: 0 1px 2px 0 #dfdfdf;
-      }
+      // box-shadow: 0 4px 5px 0 rgba(174, 198, 255, 0.19);
+      // -webkit-transition: all 0.5s ease;
+      // -moz-transition: all 0.5s ease;
+      // -o-transition: all 0.5s ease;
+      // transition: all 0.5s ease;
+      // &.navbar-closed {
+      //   box-shadow: 0 1px 2px 0 #dfdfdf;
+      // }
   }
   &.navbar-fixed-top {
     border-width: 0;
