--- a/app/styles/panel-custom.scss
+++ b/app/styles/panel-custom.scss
@@ -33,6 +33,7 @@
     text-transform: uppercase;
     font-weight: 600;
     font-size: 18px;
+    flex: 1 1 auto;
   }
 
   .panel-heading {
